--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -10,7 +10,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/app_bar_height"
+        android:layout_height="360dp"
         android:elevation="4dp"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -31,18 +31,19 @@
                 android:scaleType="fitCenter"
                 android:src="@mipmap/ic_launcher"
                 android:transitionName="eventPosterHolder"
-                app:layout_collapseMode="pin" />
+                app:layout_collapseMode="parallax" />
 
             <TextView
                 android:id="@+id/eventName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:layout_margin="@dimen/activity_vertical_margin"
                 android:elevation="4dp"
+                android:padding="@dimen/activity_vertical_margin"
                 android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                 android:textStyle="bold"
-                android:transitionName="eventNameHolder" />
+                android:transitionName="eventNameHolder"
+                app:layout_collapseMode="parallax" />
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
