--- a/app/src/main/res/layout/content_event.xml
+++ b/app/src/main/res/layout/content_event.xml
@@ -16,7 +16,8 @@
         android:transitionName="eventCardHolder"
         app:cardCornerRadius="@dimen/cardview_default_radius"
         app:cardElevation="@dimen/cardview_default_elevation"
-        app:cardUseCompatPadding="true">
+        app:cardUseCompatPadding="true"
+        app:theme="@style/CardView.Dark">
 
         <LinearLayout
             android:layout_width="match_parent"
